syntax = "proto3";

package org.csc.account.gens;

enum PTXTModule {
	TXT = 0; // 交易
};

enum PTXTCommand {
	STX = 0; // 保存交易
	GUT = 1; // 获取未发送交易
	AYC = 2; // 同步交易
	GTX = 3; // 获取交易
	MTX = 4; // 保存多重交易
	SCV = 7; // 子链交易验证
	GSC = 8; // 获取子链交易信息

	// 暂时不用
	// CTX = 3; // 节点确认交易
	// DTX = 4; // 节点回滚交易 
	// BTX = 5; // 获取已确认未block交易
	SCT = 5; // send transaction of the contract creation
	CTS = 6; //触网冷钱包-保存交易
	NOT = 50; // normal transfer
	COT = 51; // create contract
	CAC = 52; // call contract
	TOT = 53; // create token
	TOS = 54; // token transfer
	LOT = 55; // lock token
	CYT = 56; // crypto token transfer
}

//根据子链地址查询子链同步信息
message ReqQuerySideChainSyncInfo {
	string sideChainAddr = 1;
}
message RespQuerySideChainSyncInfo {
	int32 retCode = 1;
	string retMsg = 2;
	int64 totalBlocks = 3;
	int64 lastBlockNumber = 4;
	string lastBlockHash = 5;
	string lastSender = 6;
	int64 lastTimestamp = 7;
}

//子链验证交易信息
message ReqSideChainVerify {
	string sideChainAddr = 1;
	string blockHash = 2;
	string txHash = 3;
}
message RespSideChainVerify {
	int32 retCode = 1;
	string retMsg = 2;
	string blockHash = 3;
	string txHash = 4;
	string status = 5;
	string result = 6;
}

//创建合约
message ReqCreateContractTransaction {
	MultiTransactionInputImpl input = 1;
	string exdata = 2;
	MultiTransactionSignatureImpl signature = 3;
	repeated string delegate = 4;
	string data = 5;
	int64 timestamp = 6;
}
message RespCreateContractTransaction {
	string txHash = 1;
	string contractAddress = 2;
	int32 retCode = 3;
	string retMsg = 4;
}

//创建交易
message ReqCreateMultiTransaction {
	MultiTransactionImpl transaction = 1;
}
message RespCreateTransaction {
	string txHash = 1;
	string contractHash = 4;
	int32 retCode = 2;
	string retMsg = 3;
}

//获取同步交易信息
message ReqGetTxToSync {
	int32 total = 1;
}
message RespGetTxToSync {
	repeated MultiTransactionImpl txs = 1;
	int32 txCount = 2;
}

//同步交易
message ReqSyncTx {
	repeated MultiTransactionImpl txs = 1;
}
message RespSyncTx {
	int32 retCode = 1;
	repeated string errList = 2;
}

//根据交易Hash获取交易信息
message ReqGetTxByHash {
	string hash = 1;
}
message RespGetTxByHash {
	MultiTransactionImpl transaction = 1;
	int32 retCode = 2;
}

//交易对象
message MultiTransactionImpl {
	string txHash = 1;
	MultiTransactionBodyImpl txBody = 2;
	MultiTransactionNodeImpl node = 3;
	string status = 4;
	string result = 5;
}

//交易Body
message MultiTransactionBodyImpl {
	MultiTransactionInputImpl inputs = 1;
	repeated MultiTransactionOutputImpl outputs = 2;
	string exdata = 3;
	repeated MultiTransactionSignatureImpl signatures = 4;
	repeated string delegate = 5;
	string data = 6;
	int64 timestamp = 7;
	int32 type = 8;
}

//input加入分片号, lance/2019.1.14
message MultiTransactionInputImpl {
	int32 nonce = 1;
	string address = 4;
	string amount = 5;
	string token = 7;
	string symbol = 8;
	repeated string cryptoToken = 9;
	int32 sliceId = 10;
}

//output加入分片号, lance/2019.1.14
message MultiTransactionOutputImpl {
	string address = 1;
	string amount = 2;
	repeated string cryptoToken = 4;
	int32 sliceId = 5;
}

//签名
message MultiTransactionSignatureImpl {
	string signature = 1;
}
//节点
message MultiTransactionNodeImpl {
	string node = 1;
	string ip = 2;
	string bcuid = 3;
}

//创建交易请求
message ReqCreateTxColdPurse {
	string signature = 1; //交易内容
	string amount = 2;
	string inputaddress = 3; //输入地址
	string outputaddress = 4; //输出地址
	int32 nonce = 5; //次数
	string publickey = 6; //公钥
	int64 timestamp = 7; //交易时间
	string token = 8; //erc2.0 token
}

message SendNormalTransferTransaction {
	NormalTransferTransactionInput input = 1;
	repeated NormalTransferTransactionOutput outputs = 2;
	string exdata = 3;
	repeated TransactionSignature signatures = 4;
}

message NormalTransferTransactionInput {
	string nonce = 1;
	string address = 2;
	string amount = 3;
	int32 sliceId = 4;
}

message NormalTransferTransactionOutput {
	string address = 1;
	string amount = 2;
	int32 sliceId = 3;
}

message SendCreateContractTransaction {
	CreateContractTransactionInput input = 1;
	string data = 2;
	string exdata = 3;
	TransactionSignature signature = 4;
}

message CreateContractTransactionInput {
	string nonce = 1;
	string address = 2;
	int32 sliceId = 3;
}

message SendCallContractTransaction {
	CallContractTransactionInput input = 1;
	CallContractTransactionOutput output = 2;
	string data = 3;
	string exdata = 4;
	TransactionSignature signature = 5;
}

message CallContractTransactionInput {
	string nonce = 1;
	string address = 2;
	int32 sliceId = 3;
}

message CallContractTransactionOutput {
	string address = 1;
	int32 sliceId = 2;
}

message SendCreateTokenTransaction {
	CreateTokenTransactionInput input = 1;
	string exdata = 2;
	TransactionSignature signature = 3;
}

message CreateTokenTransactionInput {
	string nonce = 1;
	string address = 2;
	string amount = 3;
	string token = 4;
	int32 sliceId = 5;
}

message SendTokenTransferTransaction {
	TokenTransferTransactionInput input = 1;
	repeated TokenTransferTransactionOutput outputs = 2;
	string exdata = 3;
	TransactionSignature signature = 4;
}

message TokenTransferTransactionInput {
	string nonce = 1;
	string address = 2;
	string amount = 3;
	string token = 4;
	int32 sliceId = 5;
}

message TokenTransferTransactionOutput {
	string address = 1;
	string amount = 2;
	int32 sliceId = 3;
}

message SendLockTokenTransaction {
	LockTokenTransactionInput input = 1;
	string exdata = 2;
	TransactionSignature signature = 3;
}

message LockTokenTransactionInput {
	string nonce = 1;
	string address = 2;
	string amount = 3;
	string token = 4;
	int32 sliceId = 5;
}

message SendCryptoTokenTransferTransaction {
	repeated CryptoTokenTransferTransactionInput inputs = 1;
	repeated CryptoTokenTransferTransactionOutput outputs = 2;
	string exdata = 3;
	TransactionSignature signature = 4;
}

message CryptoTokenTransferTransactionInput {
	string nonce = 1;
	string address = 2;
	string symbol = 3;
	string cryptoToken = 4;
	int32 sliceId = 5;
}

message CryptoTokenTransferTransactionOutput {
	string address = 1;
	string symbol = 2;
	string cryptoToken = 3;
	int32 sliceId = 4;
}

message TransactionSignature {
	string signature = 1;
}

message SendTransactionResult {
	string txHash = 1;
	string contractHash = 2;
	int32 retCode = 3;
	string retMsg = 4;
}